--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
     <!-- Navbar -->
     <nav>
-        <img src="/assets/images/logo.png" alt="logo" class="logo">
+        <!-- <img src="/assets/images/logo.png" alt="logo" class="logo"> -->
+        <h1>VS Code Pet</h1>
 
         <!-- Dark/light theme switcher -->
 
